#1 fixed labels component overlapping text editing tools

--- a/src/app/shared/text-story-item/text-story-item.component.css
+++ b/src/app/shared/text-story-item/text-story-item.component.css
@@ -1,3 +1,6 @@
+.editorFocused{
+  padding-bottom: 170px;
+}
 .post-content-input-icons {
   color: black;
   opacity: .5;
